task6/otus/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
   - host: arch.homework
     http:
      paths:
      - path: /otusapp(/|$)(.*)
        backend:
          serviceName: otus-app-service
          servicePort: service-port
